qt/multimedia/gen_qmediarecorder.h

class QAudioEncoderSettings;
class QMediaObject;
class QMediaRecorder;
class QMetaObject;
class QObject;
class QSize;
class QUrl;
class QVariant;
class QVideoEncoderSettings;
typedef struct QAudioEncoderSettings QAudioEncoderSettings;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMediaObject QMediaObject;
typedef struct QMediaRecorder QMediaRecorder;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QVideoEncoderSettings QVideoEncoderSettings;
bool QMediaRecorder_override_virtual_event(void* self, intptr_t slot);
bool QMediaRecorder_override_virtual_eventFilter(void* self, intptr_t slot);
bool QMediaRecorder_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QMediaRecorder_override_virtual_timerEvent(void* self, intptr_t slot);
void QMediaRecorder_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QMediaRecorder_override_virtual_childEvent(void* self, intptr_t slot);
void QMediaRecorder_virtualbase_childEvent(void* self, QChildEvent* event);
bool QMediaRecorder_override_virtual_customEvent(void* self, intptr_t slot);
void QMediaRecorder_virtualbase_customEvent(void* self, QEvent* event);
bool QMediaRecorder_override_virtual_connectNotify(void* self, intptr_t slot);
void QMediaRecorder_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMediaRecorder_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMediaRecorder_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QMediaRecorder_staticMetaObject();
void QMediaRecorder_delete(QMediaRecorder* self);