qt/multimedia/gen_qmediarecorder.nim

proc fcQMediaRecorder_override_virtual_event(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_event".}
proc fQMediaRecorder_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMediaRecorder_virtualbase_eventFilter".}
proc fcQMediaRecorder_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_eventFilter".}
proc fQMediaRecorder_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMediaRecorder_virtualbase_timerEvent".}
proc fcQMediaRecorder_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_timerEvent".}
proc fQMediaRecorder_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMediaRecorder_virtualbase_childEvent".}
proc fcQMediaRecorder_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_childEvent".}
proc fQMediaRecorder_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMediaRecorder_virtualbase_customEvent".}
proc fcQMediaRecorder_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_customEvent".}
proc fQMediaRecorder_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMediaRecorder_virtualbase_connectNotify".}
proc fcQMediaRecorder_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_connectNotify".}
proc fQMediaRecorder_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMediaRecorder_virtualbase_disconnectNotify".}
proc fcQMediaRecorder_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMediaRecorder_override_virtual_disconnectNotify".}
proc fcQMediaRecorder_staticMetaObject(): pointer {.importc: "QMediaRecorder_staticMetaObject".}
proc fcQMediaRecorder_delete(self: pointer) {.importc: "QMediaRecorder_delete".}


func init*(T: type QMediaRecorder, h: ptr cQMediaRecorder): QMediaRecorder =
  T(h: h)
proc create*(T: type QMediaRecorder, mediaObject: gen_qmediaobject.QMediaObject): QMediaRecorder =

  QMediaRecorder.init(fcQMediaRecorder_new(mediaObject.h))
proc create*(T: type QMediaRecorder, mediaObject: gen_qmediaobject.QMediaObject, parent: gen_qobject.QObject): QMediaRecorder =

  QMediaRecorder.init(fcQMediaRecorder_new2(mediaObject.h, parent.h))
proc metaObject*(self: QMediaRecorder, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQMediaRecorder_metaObject(self.h))

proc metacast*(self: QMediaRecorder, param1: cstring): pointer =

  fcQMediaRecorder_metacast(self.h, param1)

proc metacall*(self: QMediaRecorder, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQMediaRecorder_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QMediaRecorder, s: cstring): string =

  let v_ms = fcQMediaRecorder_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QMediaRecorder, s: cstring): string =

  let v_ms = fcQMediaRecorder_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc mediaObject*(self: QMediaRecorder, ): gen_qmediaobject.QMediaObject =

  gen_qmediaobject.QMediaObject(h: fcQMediaRecorder_mediaObject(self.h))

proc isAvailable*(self: QMediaRecorder, ): bool =

  fcQMediaRecorder_isAvailable(self.h)

proc availability*(self: QMediaRecorder, ): gen_qmultimedia.QMultimediaAvailabilityStatus =

  gen_qmultimedia.QMultimediaAvailabilityStatus(fcQMediaRecorder_availability(self.h))

proc outputLocation*(self: QMediaRecorder, ): gen_qurl.QUrl =

  gen_qurl.QUrl(h: fcQMediaRecorder_outputLocation(self.h))

proc setOutputLocation*(self: QMediaRecorder, location: gen_qurl.QUrl): bool =

  fcQMediaRecorder_setOutputLocation(self.h, location.h)

proc actualLocation*(self: QMediaRecorder, ): gen_qurl.QUrl =

  gen_qurl.QUrl(h: fcQMediaRecorder_actualLocation(self.h))

proc state*(self: QMediaRecorder, ): QMediaRecorderState =

  QMediaRecorderState(fcQMediaRecorder_state(self.h))

proc status*(self: QMediaRecorder, ): QMediaRecorderStatus =

  QMediaRecorderStatus(fcQMediaRecorder_status(self.h))

proc error*(self: QMediaRecorder, ): QMediaRecorderError =

  QMediaRecorderError(fcQMediaRecorder_error(self.h))

proc errorString*(self: QMediaRecorder, ): string =

  let v_ms = fcQMediaRecorder_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc duration*(self: QMediaRecorder, ): clonglong =

  fcQMediaRecorder_duration(self.h)

proc isMuted*(self: QMediaRecorder, ): bool =

  fcQMediaRecorder_isMuted(self.h)

proc volume*(self: QMediaRecorder, ): float64 =

  fcQMediaRecorder_volume(self.h)

proc supportedContainers*(self: QMediaRecorder, ): seq[string] =

  var v_ma = fcQMediaRecorder_supportedContainers(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc containerDescription*(self: QMediaRecorder, format: string): string =

  let v_ms = fcQMediaRecorder_containerDescription(self.h, struct_miqt_string(data: format, len: csize_t(len(format))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc supportedAudioCodecs*(self: QMediaRecorder, ): seq[string] =

  var v_ma = fcQMediaRecorder_supportedAudioCodecs(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc audioCodecDescription*(self: QMediaRecorder, codecName: string): string =

  let v_ms = fcQMediaRecorder_audioCodecDescription(self.h, struct_miqt_string(data: codecName, len: csize_t(len(codecName))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc supportedAudioSampleRates*(self: QMediaRecorder, ): seq[cint] =

  var v_ma = fcQMediaRecorder_supportedAudioSampleRates(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc supportedVideoCodecs*(self: QMediaRecorder, ): seq[string] =

  var v_ma = fcQMediaRecorder_supportedVideoCodecs(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc videoCodecDescription*(self: QMediaRecorder, codecName: string): string =

  let v_ms = fcQMediaRecorder_videoCodecDescription(self.h, struct_miqt_string(data: codecName, len: csize_t(len(codecName))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc supportedResolutions*(self: QMediaRecorder, ): seq[gen_qsize.QSize] =

  var v_ma = fcQMediaRecorder_supportedResolutions(self.h)
  var vx_ret = newSeq[gen_qsize.QSize](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qsize.QSize(h: v_outCast[i])
  vx_ret

proc supportedFrameRates*(self: QMediaRecorder, ): seq[float64] =

  var v_ma = fcQMediaRecorder_supportedFrameRates(self.h)
  var vx_ret = newSeq[float64](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[float64]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc audioSettings*(self: QMediaRecorder, ): gen_qmediaencodersettings.QAudioEncoderSettings =

  gen_qmediaencodersettings.QAudioEncoderSettings(h: fcQMediaRecorder_audioSettings(self.h))

proc videoSettings*(self: QMediaRecorder, ): gen_qmediaencodersettings.QVideoEncoderSettings =

  gen_qmediaencodersettings.QVideoEncoderSettings(h: fcQMediaRecorder_videoSettings(self.h))

proc containerFormat*(self: QMediaRecorder, ): string =

  let v_ms = fcQMediaRecorder_containerFormat(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setAudioSettings*(self: QMediaRecorder, audioSettings: gen_qmediaencodersettings.QAudioEncoderSettings): void =

  fcQMediaRecorder_setAudioSettings(self.h, audioSettings.h)

proc setVideoSettings*(self: QMediaRecorder, videoSettings: gen_qmediaencodersettings.QVideoEncoderSettings): void =

  fcQMediaRecorder_setVideoSettings(self.h, videoSettings.h)

proc setContainerFormat*(self: QMediaRecorder, container: string): void =

  fcQMediaRecorder_setContainerFormat(self.h, struct_miqt_string(data: container, len: csize_t(len(container))))

proc setEncodingSettings*(self: QMediaRecorder, audioSettings: gen_qmediaencodersettings.QAudioEncoderSettings): void =

  fcQMediaRecorder_setEncodingSettings(self.h, audioSettings.h)

proc isMetaDataAvailable*(self: QMediaRecorder, ): bool =

  fcQMediaRecorder_isMetaDataAvailable(self.h)

proc isMetaDataWritable*(self: QMediaRecorder, ): bool =

  fcQMediaRecorder_isMetaDataWritable(self.h)

proc metaData*(self: QMediaRecorder, key: string): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQMediaRecorder_metaData(self.h, struct_miqt_string(data: key, len: csize_t(len(key)))))

proc setMetaData*(self: QMediaRecorder, key: string, value: gen_qvariant.QVariant): void =

  fcQMediaRecorder_setMetaData(self.h, struct_miqt_string(data: key, len: csize_t(len(key))), value.h)

proc availableMetaData*(self: QMediaRecorder, ): seq[string] =

  var v_ma = fcQMediaRecorder_availableMetaData(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc record*(self: QMediaRecorder, ): void =

  fcQMediaRecorder_record(self.h)

proc pause*(self: QMediaRecorder, ): void =

  fcQMediaRecorder_pause(self.h)

proc stop*(self: QMediaRecorder, ): void =

  fcQMediaRecorder_stop(self.h)

proc setMuted*(self: QMediaRecorder, muted: bool): void =

  fcQMediaRecorder_setMuted(self.h, muted)

proc setVolume*(self: QMediaRecorder, volume: float64): void =

  fcQMediaRecorder_setVolume(self.h, volume)

proc stateChanged*(self: QMediaRecorder, state: QMediaRecorderState): void =

  fcQMediaRecorder_stateChanged(self.h, cint(state))

proc miqt_exec_callback_QMediaRecorder_stateChanged(slot: int, state: cint) {.exportc.} =
  type Cb = proc(state: QMediaRecorderState)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = QMediaRecorderState(state)


  nimfunc[](slotval1)

proc onstateChanged*(self: QMediaRecorder, slot: proc(state: QMediaRecorderState)) =
  type Cb = proc(state: QMediaRecorderState)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQMediaRecorder_connect_stateChanged(self.h, cast[int](addr tmp[]))
proc statusChanged*(self: QMediaRecorder, status: QMediaRecorderStatus): void =

  fcQMediaRecorder_statusChanged(self.h, cint(status))
